--- a/xchange_Updated/src/main/resources/templates/Dashboard.html
+++ b/xchange_Updated/src/main/resources/templates/Dashboard.html
@@ -123,7 +123,7 @@
     <div class="currency-card green">
         <div class="currency-details">
             <div class="currency-title" style="color:black;">Current Balance</div>
-            <div class="currency-value" style="color:Black; !mportant">
+            <div class="currency-value" style="color:Black !important;">
               <span class="Available_balance">₦0.00</span>
             </div>
             <div class="currency-change positive-change">
