--- a/xchange_Updated/src/main/resources/templates/Forgot_pass.html
+++ b/xchange_Updated/src/main/resources/templates/Forgot_pass.html
@@ -88,7 +88,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p style="color: black;!important">A password reset link has been sent to your email address. Please check your inbox and follow the instructions.</p>
+                    <p style="color: black !important;">A password reset link has been sent to your email address. Please check your inbox and follow the instructions.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
