--- a/xchange_Updated/src/main/resources/templates/GenerateQR.html
+++ b/xchange_Updated/src/main/resources/templates/GenerateQR.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta name="user-id" th:content="${userId}">
-  <meta name="username" th:content="${username}">
+   <meta name="user-id" th:content="${user.id}">
+  <meta name="username" th:content="${user.username}"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Generate Payment QR</title>
@@ -12,7 +12,10 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
   <link th:href="@{/css/GenerateQR.css}" rel="stylesheet">
+  <script type="module" src="/js/notifications.js"></script>
 </head>
 <body>
   <div class="container">
