--- a/xchange_Updated/src/main/resources/templates/GenerateQR.html
+++ b/xchange_Updated/src/main/resources/templates/GenerateQR.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
   <link th:href="@{/css/GenerateQR.css}" rel="stylesheet">
-  <script type="module" src="/js/notifications.js"></script>
+  <script type="module" th:src="@{/js/notifications.js}"></script>
 </head>
 <body>
   <div class="container">
