--- a/xchange_Updated/src/main/resources/templates/Login.html
+++ b/xchange_Updated/src/main/resources/templates/Login.html
@@ -45,7 +45,7 @@
                     <div class="card auth-card">
                         <div class="card-body p-5">
                             <h2 class="text-center mb-4">Welcome Back</h2>
-                            <p class="text-center">Lets sign you right in......</p>
+                            <p class="text-center">Lets sign you right in</p>
                             
                             
                             <!-- Alerts -->
