--- a/xchange_Updated/src/main/resources/templates/Dashboard.html
+++ b/xchange_Updated/src/main/resources/templates/Dashboard.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="user-id" th:content="${user.id}">
-  <meta name="username" th:content="${user.username}"/>
+  <meta name="user-id" th:content="${id}">
+  <meta name="username" th:content="${username}"/>
   <title>XChange - Dashboard</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
@@ -63,7 +63,7 @@
       </div>
         <div class="menu-item">
           <i class="fas fa-exchange-alt"></i>
-          <span ><a href=""> Transactions</a></span>
+          <span ><a href="/transactions"> Transactions</a></span>
         </div>
         <div class="menu-item">
           <i class="fas fa-chart-line"></i>
