--- a/xchange_Updated/src/main/resources/templates/Forgot_pass.html
+++ b/xchange_Updated/src/main/resources/templates/Forgot_pass.html
@@ -12,20 +12,15 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: transparent;">
         <div class="container">
             <a class="navbar-brand fade-in" th:href="@{/}">
                 <i class="fas fa-qrcode me-2"></i>XChange
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item ms-lg-3">
-                        <a class="nav-link btn btn-primary px-4" th:href="@{/login}">Back to Login</a>
-                    </li>
-                </ul>
+            <div class="navbar-nav ms-auto">
+                <div class="nav-item">
+                    <a class="nav-link btn btn-primary px-4" th:href="@{/}">Go back</a>
+                </div>
             </div>
         </div>
     </nav>
