--- a/xchange_Updated/src/main/resources/templates/Scan_pay.html
+++ b/xchange_Updated/src/main/resources/templates/Scan_pay.html
@@ -48,7 +48,7 @@
         </div>
         <div class="menu-item">
           <i class="fas fa-exchange-alt"></i>
-          <span><a href="">Transactions</a></span>
+          <span><a href="/transactions">Transactions</a></span>
         </div>
         <div class="menu-item">
           <i class="fas fa-chart-line"></i>
