--- a/xchange_Updated/src/main/resources/templates/Transactions.html
+++ b/xchange_Updated/src/main/resources/templates/Transactions.html
@@ -26,7 +26,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
   <link th:href="@{/css/transactions.css}" rel="stylesheet" />
-
+    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+    <script th:src="@{/js/loading.js}" defer></script>
+    
   <script th:inline="javascript">
     /*<![CDATA[*/
     var initialTransactionsData = /*[[${transactions.content}]]*/[];
@@ -367,7 +369,7 @@
               <div class="transaction-main">
                 <div class="transaction-user">
                   <span
-                    th:text="${transaction.buyer.id == id} ? 'From: ' + (transaction.seller.username != null ? transaction.seller.username : transaction.seller.email) : 'To: ' + (transaction.buyer.username != null ? transaction.buyer.username : transaction.buyer.email)"></span>
+                    th:text="${transaction.buyer.id == id} ? 'From: ' + (${transaction.seller.username != null ? transaction.seller.username : transaction.seller.email}) : 'To: ' + (${transaction.buyer.username != null ? transaction.buyer.username : transaction.buyer.email})"></span>
                 </div>
                 <div class="transaction-amount"
                   th:classappend="${transaction.buyer.id == id} ? 'positive' : 'negative'">
